# BlockStudio

./: BlockStudio.cppcheck  CMakeLists.txt  config.h
config/: compile_config.h  xdiff_config.h.in
lang/: en_us.lang  zh_cn.lang
resources/: THIRD_PARTY_LICENCE  blockstudio.config  compile.bat  resource_list.json
src/: ApplicationEventBus.cc  ApplicationEventBus.h  Config.cc  Config.h  Core.cc  Core.h  GlobalVars.cc  GlobalVars.h  Localizer.cc  Localizer.h  MallocAllocator.hpp  Options.cc  Options.h  PatchDecoder.hpp  PatchEncoder.hpp  RangedDownload.cc  RangedDownload.h  TaskQueue.cpp  TaskQueue.h  Utils.cc  Utils.h  compile_config.cc  main_win.cc
tests/: TestsEntry.cc  UnitTest.hpp
